Mais ajustes UIX

--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -19,6 +19,13 @@
                                 aria-controls="nav-config" aria-selected="false"><i class="bi bi-bank"></i>&nbsp;&nbsp;Governança</button>
                     <button class="nav-link" id="nav-config-tab" data-bs-toggle="tab" data-bs-target="#nav-config"
                         type="button" role="tab" aria-controls="nav-config" aria-selected="false"><i class="bi bi-cpu"></i>&nbsp;&nbsp;Ferramentas</button>
+
+                                    <div class="nav-link" type="button" role="tab">
+                                        <div class="form-check form-switch pr-0 mr-0 align-middle">
+                                            <input class="form-check-input" type="checkbox" id="checkbox-dismiss-all-alerts" entityfieldformtype="checkbox"
+                                                checked>
+                                        </div>
+                                    </div>
                 </div>
             </div>
         </div>
