--- a/views/includes/adm/tools/dev/tools-dev-entity-inc.ejs
+++ b/views/includes/adm/tools/dev/tools-dev-entity-inc.ejs
@@ -14,7 +14,7 @@
         <% } else { // flush %>
             <div class="flex-column mt-3" id="entity-div-add">
                 <span class="btn btn-sm btn-outline-success mr-2 mb-2" id="entity-btn-add">
-                    <i class="bi bi-plus-square"></i>
+                    <i class="bi bi-plus-square"></i>&nbsp;Criar
                 </span>
                 <% entities=payload.entities; for(let entity in entities){ // flush %>
                     <span class="btn btn-sm btn-outline-success mr-2 mb-2 entity-btn-<%=entities[entity].name%>">
