Entiy tBody ajustada

--- a/views/blocks/javascript.ejs
+++ b/views/blocks/javascript.ejs
@@ -1,5 +1,6 @@
 <script src="assets/vendor/axios/axios.min.js"></script>
 <script src="assets/vendor/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
+<script src="assets/vendor/popper-2.9.2-dist/popper.min.js"></script>
 <script src="assets/vendor/socket.io-4.1.2/socket.io.min.js"></script>
 <script src="assets/javascript/tools/api/request.js"></script>
 <script src="assets/javascript/tools/socket/package.js"></script>
