--- a/views/blocks/style.ejs
+++ b/views/blocks/style.ejs
@@ -2,6 +2,11 @@
 <link href="assets/vendor/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="assets/vendor/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
 <style>
+
+    body{
+background-color:#ffffff
+    }
+
     .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
