--- a/views/includes/adm/tools/dev/tools-dev-entity-create-inc.ejs
+++ b/views/includes/adm/tools/dev/tools-dev-entity-create-inc.ejs
@@ -7,29 +7,29 @@
     <div id="entity-div-create">
         <form class="form-group">
             <div class="mb-4" id="entity-input-name">
-                <label for="entity-input-text-name" class="label text-secondary"><i
+                <label for="entity-input-text-name" class="label mb-1 text-secondary"><i
                         class="bi bi-box"></i>&nbsp;Nome</label>
-                <input type="text" class="form-control" id="entity-name" value=""
+                <input type="text" class="form-control" id="entity-name" value="pessoa"
                     placeholder="// #issue: pesquisar no banco entidade com mesmo nome a partir do terceiro caracter digitado">
             </div>
             <div class="mb-4 " style="display: none;" id="entity-input-namespace">
-                <label for="entity-namespace" class="label text-secondary"><i class="bi bi-tags"></i>&nbsp;Namespace
+                <label for="entity-namespace" class="label mb-1 text-secondary"><i class="bi bi-tags"></i>&nbsp;Namespace
                     <small>nomes dos campos separados por
-                        virgulas</small></label>
+                        virgulas. <span class="text-danger"> Os campos id, crdate e isctive são criados pelo sistema</span>.</small></label>
                 <textarea class="form-control" style="height: 5rem;" id="entity-namespace"
-                    placeholder="// #issue: analisar o namespace de todo sistema"></textarea>
+                    placeholder="// #issue: analisar o namespace de todo sistema">
+nome, email, celular, senha</textarea>
             </div>
             <div class="mb-4" style="display: none;" id="entity-input-fields">
-                <label for="entity-fields" class="label text-secondary"><i class="bi bi-server"></i>&nbsp;Campos</label>
+                <label for="entity-fields" class="label mb-1 text-secondary"><i class="bi bi-server"></i>&nbsp;Campos</label>
                 <div class="table-responsive border-top">
                     <table class="table table-hover">
                         <thead>
                             <th class="text-left">Nome</th>
-                            <th class="text-center" style="width: 8rem;">Proteção&nbsp;<i class="bi bi-shield-lock"></i>
+                            <th class="text-center" style="width: 8rem;">Privacidade&nbsp;<i class="bi bi-lock-fill"></i>
                             </th>
                             <th class="text-center" style="width: 8rem;">Tipo</th>
                             <th class="text-center" style="width: 8rem;">Tamanho</th>
-                            <th class="text-center">Valor inicial</th>
                             <th class="text-left" style="width: 2.5rem;">Null</th>
                             <th class="text-left fw-bold" style="width: 2.5rem;"><i class="bi bi-search"></i></th>
                         </thead>
@@ -38,7 +38,7 @@
                 </div>
             </div>
             <div class="mb-4 entity-input-form" style="display: none;" id="entity-div-fields-form">
-                <label for="entity-name" class="label text-secondary">
+                <label for="entity-name" class="label mb-1 text-secondary">
                     <input class="form-check-input" type="checkbox" id="entity-checkbox-form">&nbsp;Formulário</label>
                 <div class="table-responsive border-top" id="entity-div-table-fields-form" style="display: none;">
                     <table class="table table-striped table-hover">
@@ -85,6 +85,11 @@
                 , fields = document.getElementById('entity-input-fields')
                 , tbodyFields = document.getElementById('entity-fields-tbody')
                 , tbodyFieldsHtml = ''
+                , selectFieldPrivacy
+                , selectFieldType
+                , inputFieldLength
+                , fieldNullable
+                , fieldSearcheable
                 , checkboxForm = document.getElementById('entity-checkbox-form')
                 , divFieldsForm = document.getElementById('entity-div-fields-form')
                 , showForm = false
@@ -107,6 +112,8 @@
                     // #issue: pesquisar no banco entidade com mesmo nome a partir do terceiro caracter digitado
                     nameIsValid = name.value.length >= 3
 
+                    // #issue: não sei usar regex em 202109140107
+                    
                     if (nameIsValid) {
 
                         inputNamespace.style.display = 'block'
@@ -145,13 +152,14 @@
                                     try {
 
                                         arrNamespace = namespace.value.split(',')
-                                        tbodyFields.innerHTML = helperTbody(name, arrNamespace, tbodyFieldsHtml, tbodyFormHtml, 'tbodyFields')
-                                        tbodyForm.innerHTML = helperTbody(name, arrNamespace, tbodyFormHtml, tbodyFormHtml, 'tbodyForm')
+                                        let fieldname, fieldprivacy
+                                        tbodyFields.innerHTML = helperTbody(arrNamespace, tbodyFieldsHtml, tbodyFormHtml, 'tbodyFields')
+                                        tbodyForm.innerHTML = helperTbody(arrNamespace, tbodyFieldsHtml, tbodyFormHtml, 'tbodyForm')
                                         btnCreate.style.display = 'block'
 
                                     } catch (err) {
 
-                                        alert('Erro', erro, 'danger')
+                                        alert('Erro', err, 'danger')
 
                                     }
 
@@ -180,66 +188,56 @@
             )
         })
 
-        function helperTbody(name, arrNamespace, tbodyFieldsHtml, tbodyFormHtml, whichTbody) {
+        function helperTbody(arrNamespace, tbodyFieldsHtml, tbodyFormHtml, whichTbody) {
+
+            let fieldname
 
             switch (whichTbody) {
 
                 case 'tbodyFields':
+
                     for (i = 0; i < arrNamespace.length; i++) {
+
+                        fieldname = arrNamespace[i].toLowerCase().trim()
 
                         tbodyFieldsHtml += `<tr>
                                                 <td>
-                                                    <input class="form-control" type="text" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-name-input" entityfieldformtype="text" value="${arrNamespace[i].trim().toLowerCase()}">
+                                                    <input class="form-control" type="text" id="field-${fieldname}-name-input" entityfieldformtype="text" value="${fieldname}" readonly>
                                                 </td>
-                                                <td class="text-center" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-confidentiality">
-                                                    <div class="form-check-inline mx-0 px-0 pb-2 pt-0">
-                                                        <input type="checkbox" class="btn-check" id="btn-check" autocomplete="off">
-                                                        <label class="btn mx-o px-0 text-secondary" for="inlineCheckbox1"><i class="bi bi-shield-slash"></i></label>
-                                                    </div>
-                                                    <div class="form-check-inline mx-0 px-0 pb-2 pt-0">
-                                                        <input type="checkbox" class="btn-check" id="btn-check" autocomplete="off">
-                                                        <label class="btn mx-o px-0 text-secondary" for="inlineCheckbox2"><i class="bi bi-shield"></i></label>
-                                                    </div>
-                                                    <div class="form-check-inline mx-0 px-0 pb-2 pt-0">
-                                                        <input type="checkbox" class="btn-check" id="btn-check" autocomplete="off">
-                                                        <label class="btn mx-o px-0 text-secondary" for="inlineCheckbox3"><i class="bi bi-shield-shaded"></i></label>
-                                                    </div>
-                                                    <div class="form-check-inline mx-0 px-0 pb-2 pt-0">
-                                                        <input type="checkbox" class="btn-check" id="btn-check" autocomplete="off">
-                                                        <label class="btn mx-o px-0 text-secondary" for="inlineCheckbox3"><i class="bi bi-shield-lock-fill"></i></label>
-                                                    </div>
-                                                    <div class="form-check-inline mx-0 px-0 pb-2 pt-0">
-                                                        <input type="checkbox" class="btn-check" id="btn-check" autocomplete="off">
-                                                        <label class="btn mx-o px-0 text-secondary" for="inlineCheckbox3"><i class="bi bi-shield-fill-exclamation"></i></label>
-                                                    </div>
+                                                <td class="text-center" entityfieldformtype="select">
+                                                    <select class="form-select select-privacy" aria-label="lgpd" id="field-${fieldname}-privacy">
+                                                        <option value="confidential">Dado:</option>
+                                                        <option value="confidential">Pessoal</option>
+                                                        <option value="confidential">Comercial</option>
+                                                        <option value="sensitive">Sensível</option>
+                                                        <option value="confidential">Público</option>
+                                                        <option value="confidential">Anonimizado</option>
+                                                    </select>
                                                 </td>
-                                                <td class="text-center" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-type" entityfieldformtype="select">
-                                                <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Tipo">
-                                                <datalist id="datalistOptions">
-                                                <option value="string">
-                                                <option value="number">
-                                                <option value="date">
-                                                <option value="boolean">
-                                                </datalist>
+                                                <td class="text-center" entityfieldformtype="select">
+                                                    <select class="form-select select-type" aria-label="lgpd" id="field-${fieldname}-type">
+                                                        <option value="confidential">Tipo:</option>
+                                                        <option value="Number">Número</option>
+                                                        <option value="String">Texto</option>
+                                                        <option value="Date">Data</option>
+                                                        <option value="Boolean">Booleano</option>
+                                                    </select>
                                                 </td>
-                                                <td class="text-center" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-length" entityfieldformtype="number">
-                                                    <input type="number" class="form-control" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-length-input" value=""> </td>
-                                                <td class="text-center" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-default-" entityfieldformtype="text">
-                                                    <input class="form-control" type="text" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-default-input" entityfieldformtype="text">
-                                                </td>
+                                                <td class="text-center" id="field-${fieldname}-length" entityfieldformtype="number"></td>
                                                 <td class="text-left mr-o pr-0">
                                                     <div class="form-check form-switch pr-0 mr-0 align-middle">
-                                                        <input class="form-check-input" type="checkbox" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-nullable=input" entityfieldformtype="checkbox">
+                                                        <input class="form-check-input" type="checkbox" id="field-${fieldname}-nullable=input" entityfieldformtype="checkbox">
                                                     </div>
                                                 </td>
-                                                <td class="text-center" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-searcheble">
+                                                <td class="text-center" id="field-${fieldname}-searcheble">
                                                     <div class="form-check form-switch pr-0 mr-0 align-middle">
-                                                        <input class="form-check-input" type="checkbox" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-searcheble=input" entityfieldformtype="checkbox">
+                                                        <input class="form-check-input" type="checkbox" id="field-${fieldname}-searcheble=input" entityfieldformtype="checkbox">
                                                     </div>
                                                 </td>
                                             </tr>`
 
                     }
+
                     return tbodyFieldsHtml
                     break
 
@@ -247,16 +245,16 @@
                     for (i = 0; i < arrNamespace.length; i++) {
 
                         tbodyFormHtml += `<tr>
-                                            <td>${arrNamespace[i].trim().toLowerCase()}</td>
-                                            <td class="text-center" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-form-type">type</td>
-                                            <td class="text-center" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-form-label">label</td>
-                                            <td class="text-center" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-form-value">value</td>
-                                            <td class="text-center" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-form-required">
-                                                <input class="form-check-input" type="checkbox" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-form-required" checked>
+                                            <td>${fieldname}</td>
+                                            <td class="text-center" id="field-${fieldname}-form-type">type</td>
+                                            <td class="text-center" id="field-${fieldname}-form-label">label</td>
+                                            <td class="text-center" id="field-${fieldname}-form-value">value</td>
+                                            <td class="text-center" id="field-${fieldname}-form-required">
+                                                <input class="form-check-input" type="checkbox" id="field-${fieldname}-form-required" checked>
                                             </td>
-                                            <td class="text-center" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-form-placeholder">placeholder</td>
-                                            <td class="text-center" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-form-formatter">formatter</td>
-                                            <td class="text-center" id="entity-${name}-field-${arrNamespace[i].trim().toLowerCase()}-form-wcag">wcag</td>
+                                            <td class="text-center" id="field-${fieldname}-form-placeholder">placeholder</td>
+                                            <td class="text-center" id="field-${fieldname}-form-formatter">formatter</td>
+                                            <td class="text-center" id="field-${fieldname}-form-wcag">wcag</td>
                                         </tr>`
 
                     }
