--- a/views/includes/adm/tools/dev/tools-dev-entity-create-inc.ejs
+++ b/views/includes/adm/tools/dev/tools-dev-entity-create-inc.ejs
@@ -13,20 +13,24 @@
                     placeholder="// #issue: pesquisar no banco entidade com mesmo nome a partir do terceiro caracter digitado">
             </div>
             <div class="mb-4 " style="display: none;" id="entity-input-namespace">
-                <label for="entity-namespace" class="label mb-1 text-secondary"><i class="bi bi-tags"></i>&nbsp;Namespace
+                <label for="entity-namespace" class="label mb-1 text-secondary"><i
+                        class="bi bi-tags"></i>&nbsp;Namespace
                     <small>nomes dos campos separados por
-                        virgulas. <span class="text-danger"> Os campos id, crdate e isctive são criados pelo sistema</span>.</small></label>
+                        virgulas. <span class="text-danger"> Os campos id, crdate e isctive são criados pelo
+                            sistema</span>.</small></label>
                 <textarea class="form-control" style="height: 5rem;" id="entity-namespace"
                     placeholder="// #issue: analisar o namespace de todo sistema">
 nome, email, celular, senha</textarea>
             </div>
             <div class="mb-4" style="display: none;" id="entity-input-fields">
-                <label for="entity-fields" class="label mb-1 text-secondary"><i class="bi bi-server"></i>&nbsp;Campos</label>
+                <label for="entity-fields" class="label mb-1 text-secondary"><i
+                        class="bi bi-server"></i>&nbsp;Campos</label>
                 <div class="table-responsive border-top">
                     <table class="table table-hover">
                         <thead>
                             <th class="text-left">Nome</th>
-                            <th class="text-center" style="width: 8rem;">Privacidade&nbsp;<i class="bi bi-lock-fill"></i>
+                            <th class="text-center" style="width: 8rem;">Privacidade&nbsp;<i
+                                    class="bi bi-lock-fill"></i>
                             </th>
                             <th class="text-center" style="width: 8rem;">Tipo</th>
                             <th class="text-center" style="width: 8rem;">Tamanho</th>
@@ -74,29 +78,32 @@ nome, email, celular, senha</textarea>
 
             event.preventDefault()
 
+            // elementos do dom 
             let div = document.getElementById('entity-div')
                 , inputName = document.getElementById('entity-input-name')
                 , name = document.getElementById('entity-name')
-                , nameIsValid = false
-                , enter = false
                 , inputNamespace = document.getElementById('entity-input-namespace')
                 , namespace = document.getElementById('entity-namespace')
-                , namespaceIsValid = false
                 , fields = document.getElementById('entity-input-fields')
                 , tbodyFields = document.getElementById('entity-fields-tbody')
+                , checkboxForm = document.getElementById('entity-checkbox-form')
+                , divFieldsForm = document.getElementById('entity-div-fields-form')
+                , form = document.getElementById('entity-div-table-fields-form')
+                , tbodyForm = document.getElementById('entity-fields-form-tbody')
+                , btnCreate = document.getElementById('entity-btn-create')
+
+                // listners, testers e helpers
+                , enter = false
+                , nameIsValid = false
+                , namespaceIsValid = false
                 , tbodyFieldsHtml = ''
+                , tbodyFormHtml = ''
                 , selectFieldPrivacy
                 , selectFieldType
                 , inputFieldLength
                 , fieldNullable
                 , fieldSearcheable
-                , checkboxForm = document.getElementById('entity-checkbox-form')
-                , divFieldsForm = document.getElementById('entity-div-fields-form')
                 , showForm = false
-                , form = document.getElementById('entity-div-table-fields-form')
-                , tbodyForm = document.getElementById('entity-fields-form-tbody')
-                , tbodyFormHtml = ''
-                , btnCreate = document.getElementById('entity-btn-create')
 
             div.style.display = 'block'
             name.focus()
@@ -113,7 +120,7 @@ nome, email, celular, senha</textarea>
                     nameIsValid = name.value.length >= 3
 
                     // #issue: não sei usar regex em 202109140107
-                    
+
                     if (nameIsValid) {
 
                         inputNamespace.style.display = 'block'
