Correção erro meta

--- a/views/blocks/head.ejs
+++ b/views/blocks/head.ejs
@@ -7,8 +7,6 @@
 <%=title%>
 </title>
 <%-include style.ejs %>
-<script>function getty(e){by=t=>{switch (t){case 'id': return document.getElementById(e); break;case 'name': return document.getElementsByName(e);break;case 'tag':return document.getElementsByTagName(el);break;default:return}}}</script>
-<script>var meta = getty('meta').by('tag')</script>
-<script>console.log(meta)</script>
+<script>var meta = document.getElementsByTagName('meta')</script>
 <script src="assets/javascript/app/alert.js"></script>
 </head>
