--- a/views/includes/adm/tools/dev/tools-dev-entity-create-inc.ejs
+++ b/views/includes/adm/tools/dev/tools-dev-entity-create-inc.ejs
@@ -6,6 +6,12 @@
     </div>
     <div id="entity-div-create">
         <form class="form-group">
+            
+            <div class="alert alert-info alert-dismissible show" role="alert">
+                <strong><i class="bi bi-box"></i>&nbsp;&nbsp;Nome</strong><small> : primário (<strong>único</strong>) em todo o sistema</small>
+                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+
             <div class="mb-4" id="entity-div-input-name">
                 <label for="entity-input-text-name" class="label mb-1 text-secondary"><i
                         class="bi bi-box"></i>&nbsp;Nome</label>
@@ -13,17 +19,25 @@
                     placeholder="// #issue: pesquisar no banco entidade com mesmo nome a partir do terceiro caracter digitado">
             </div>
             <div class="mb-4 " style="display: none;" id="entity-div-input-namespace">
-                <label for="entity-namespace" class="label mb-1 text-secondary"><i
-                        class="bi bi-tags"></i>&nbsp;Namespace
-                    <small>nomes dos campos separados por
-                        virgulas. <span class="text-danger"> Os campos id, crdate e isctive são criados pelo
-                            sistema</span>.</small></label>
+
+                <div class="alert alert-info alert-dismissible show" role="alert">
+                    <strong><i class="bi bi-tags"></i>&nbsp;&nbsp;Namespace</strong><small> : id[entidade], crdate e isactive são criados em todas as tabelas por padrão</small>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+
+                <label for="entity-namespace" class="label mb-1 text-secondary"><i class="bi bi-tags"></i>&nbsp;Namespace</label>
                 <textarea class="form-control" style="height: 5rem;" id="entity-input-namespace"
                     placeholder="// #issue: analisar o namespace de todo sistema">
 nome, email, celular, senha</textarea>
             </div>
 
             <div class="mb-4" style="display: none;" id="entity-div-input-fields">
+
+                <div class="alert alert-info alert-dismissible show" role="alert">
+                    <strong><i class="bi bi-server"></i>&nbsp;&nbsp;Table</strong><small> : configura a privacidade, tipo, tamanho e Null: o campo não é obrigatório; <i class="bi bi-search"></i>: permite busca </small>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+
                 <label for="entity-fields" class="label mb-1 text-secondary"><i
                         class="bi bi-server"></i>&nbsp;Campos</label>
                 <div class="table-responsive border-top">
@@ -43,11 +57,6 @@ nome, email, celular, senha</textarea>
                 </div>
             </div>
 
-            <div class="mb-1 text-secondary">
-                <label for="entity-name" class="label">
-                    <input class="form-check-input" type="checkbox" id="entity-toggle-form">&nbsp;Formulário</label>
-            </div>
-
             <div class="table-responsive border-top" id="entity-div-input-fields-form" style="display: none;">
                 <table class="table table-striped table-hover">
                     <thead>
@@ -64,13 +73,10 @@ nome, email, celular, senha</textarea>
                     </thead>
                     <tbody id="entity-fields-form-tbody"></tbody>
                 </table>
-                <div class="d-grid gap-2" id="entity-btn-create" style="display: none;">
-                    <button class="btn btn-success" type="button"><i class="bi bi-box"></i>&nbsp;&nbsp;Criar
-                        entidade</button>
-                </div>
             </div>
         </form>
     </div>
+
 </div>
 <script>
 
@@ -89,31 +95,21 @@ nome, email, celular, senha</textarea>
                     "input": {
                         "name": document.getElementById('entity-div-input-name'),
                         "namespace": document.getElementById('entity-div-input-namespace'),
-                        "fields": document.getElementById('entity-div-input-fields'),
-                        "fieldsForm": document.getElementById('entity-div-input-fields-form'),
+                        "fields": document.getElementById('entity-div-input-fields')
                     }
                 },
 
                 "input": {
                     "name": document.getElementById('entity-input-name'),
                     "namespace": document.getElementById('entity-input-namespace'),
-                    "tBodyFields": document.getElementById('entity-fields-tbody'),
-                    "tBodyForm": document.getElementById('entity-fields-form-tbody')
-                },
-
-                listens: {
-                    toggleForm: document.getElementById('entity-toggle-form'),
-                    btnCreate: document.getElementById('entity-btn-create'),
+                    "tBodyFields": document.getElementById('entity-fields-tbody')
                 }
-
             }
                 , div = dom.div
                 , input = dom.input
-                , listens = dom.listens
                 , enterPressed = false
                 , nameIsValid = false
                 , namespaceIsValid = false
-                , showFieldsForm = false
 
             div.main.style.display = 'block'
             div.create.style.display = 'block'
@@ -151,30 +147,13 @@ nome, email, celular, senha</textarea>
                                 if (namespaceIsValid) {
 
                                     div.input.fields.style.display = 'block'
-                                    listens.toggleForm.addEventListener('click', (event) => {
-
-                                        showFieldsForm = listens.toggleForm.checked
-
-                                        if (showFieldsForm) {
-
-                                            div.input.fieldsForm.style.display = 'block'
-
-                                        } else {
-
-                                            div.input.fieldsForm.style.display = 'none'
-
-                                        }
-
-                                    })
 
                                     try {
 
                                         let namespaceValue = input.namespace.value
                                             , arrNamespace = namespaceValue.split(',')
 
-                                        input.tBodyFields.innerHTML = helperTbody(arrNamespace, 'fields')
-                                        input.tBodyForm.innerHTML = helperTbody(arrNamespace, 'fieldsForm')
-                                        listens.btnCreate.style.display = 'block'
+                                        input.tBodyFields.innerHTML = helperTbody(arrNamespace)
 
                                     } catch (err) {
 
@@ -185,12 +164,9 @@ nome, email, celular, senha</textarea>
                                 } else {
 
                                     div.input.fields.innerHTML = ''
-                                    div.input.fieldsForm.innerHTML = ''
                                     input.namespace.value = ''
                                     div.input.namespace.style.display = 'none'
                                     div.input.fields.style.display = 'none'
-                                    div.input.fieldsForm.style.display = 'none'
-
                                     input.name.focus()
 
                                 }
@@ -209,88 +185,56 @@ nome, email, celular, senha</textarea>
             )
         })
 
-        function helperTbody(arrNamespace, whichTbody) {
+        function helperTbody(arrNamespace) {
 
             let fieldname = ''
-                , tbodyFieldsHtml = ''
-                , tbodyFormHtml = ''
+                , tbodyFieldsHtml = []
 
-            switch (whichTbody) {
 
-                case 'fields':
+            for (i = 0; i < arrNamespace.length; i++) {
 
-                    for (i = 0; i < arrNamespace.length; i++) {
+                fieldname = arrNamespace[i].toLowerCase().trim()
 
-                        fieldname = arrNamespace[i].toLowerCase().trim()
-
-                        tbodyFieldsHtml += `<tr>
-                                                <td>
-                                                    <input class="form-control" type="text" id="field-${fieldname}-name-input" entityfieldformtype="text" value="${fieldname}" readonly>
-                                                </td>
-                                                <td class="text-center" entityfieldformtype="select">
-                                                    <select class="form-select select-privacy" aria-label="lgpd" id="field-${fieldname}-privacy">
-                                                        <option value="confidential">Dado:</option>
-                                                        <option value="confidential">Pessoal</option>
-                                                        <option value="confidential">Comercial</option>
-                                                        <option value="sensitive">Sensível</option>
-                                                        <option value="confidential">Público</option>
-                                                        <option value="confidential">Anonimizado</option>
-                                                    </select>
-                                                </td>
-                                                <td class="text-center" entityfieldformtype="select">
-                                                    <select class="form-select select-type" aria-label="lgpd" id="field-${fieldname}-type">
-                                                        <option value="confidential">Tipo:</option>
-                                                        <option value="Number">Número</option>
-                                                        <option value="String">Texto</option>
-                                                        <option value="Date">Data</option>
-                                                        <option value="Boolean">Booleano</option>
-                                                    </select>
-                                                </td>
-                                                <td class="text-center" id="field-${fieldname}-length" entityfieldformtype="number"></td>
-                                                <td class="text-left mr-o pr-0">
-                                                    <div class="form-check form-switch pr-0 mr-0 align-middle">
-                                                        <input class="form-check-input" type="checkbox" id="field-${fieldname}-nullable=input" entityfieldformtype="checkbox">
-                                                    </div>
-                                                </td>
-                                                <td class="text-center" id="field-${fieldname}-searcheble">
-                                                    <div class="form-check form-switch pr-0 mr-0 align-middle">
-                                                        <input class="form-check-input" type="checkbox" id="field-${fieldname}-searcheble=input" entityfieldformtype="checkbox">
-                                                    </div>
-                                                </td>
-                                            </tr>`
-
-                    }
-
-                    return tbodyFieldsHtml
-                    break
-
-                case 'fieldsForm':
-                    for (i = 0; i < arrNamespace.length; i++) {
-
-                        tbodyFormHtml += `<tr>
-                                            <td>${fieldname}</td>
-                                            <td class="text-center" id="field-${fieldname}-form-type">type</td>
-                                            <td class="text-center" id="field-${fieldname}-form-label">label</td>
-                                            <td class="text-center" id="field-${fieldname}-form-value">value</td>
-                                            <td class="text-center" id="field-${fieldname}-form-required">
-                                                <input class="form-check-input" type="checkbox" id="field-${fieldname}-form-required" checked>
-                                            </td>
-                                            <td class="text-center" id="field-${fieldname}-form-placeholder">placeholder</td>
-                                            <td class="text-center" id="field-${fieldname}-form-formatter">formatter</td>
-                                            <td class="text-center" id="field-${fieldname}-form-wcag">wcag</td>
-                                        </tr>`
-
-                    }
-
-                    return tbodyFormHtml
-                    break
-
-                default:
-                    return alert('Erro', 'whichTbody diferente de tbodyFields ou tbodyForm', 'danger')
-                    break
-
+                tbodyFieldsHtml.push(`<tr>
+                                        <td>
+                                            <input class="form-control" type="text" id="field-${fieldname}-name-input" entityfieldformtype="text" value="${fieldname}" readonly>
+                                        </td>
+                                        <td class="text-center" entityfieldformtype="select">
+                                            <select class="form-select select-privacy" aria-label="lgpd" id="field-${fieldname}-privacy">
+                                                <option value="">Dado:</option>
+                                                <option value="pessoal">Pessoal</option>
+                                                <option value="comercial">Comercial</option>
+                                                <option value="sensivel">Sensível</option>
+                                                <option value="publico">Público</option>
+                                                <option value="anomatizado">Anonimizado</option>
+                                            </select>
+                                        </td>
+                                        <td class="text-center" entityfieldformtype="select">
+                                            <select class="form-select select-type" aria-label="lgpd" id="field-${fieldname}-type">
+                                                <option value="">Tipo:</option>
+                                                <option value="number">Número</option>
+                                                <option value="string">Texto</option>
+                                                <option value="date">Data</option>
+                                                <option value="boolean">Booleano</option>
+                                            </select>
+                                        </td>
+                                        <td class="text-center" entityfieldformtype="number">
+                                        <input type="number" class="form-control" id="field-${fieldname}-length" value="" readonly>
+                                        </td>
+                                        <td class="text-left mr-o pr-0">
+                                            <div class="form-check form-switch pr-0 mr-0 align-middle">
+                                                <input class="form-check-input" type="checkbox" id="field-${fieldname}-nullable=input" entityfieldformtype="checkbox">
+                                            </div>
+                                        </td>
+                                        <td class="text-center" id="field-${fieldname}-searcheble">
+                                            <div class="form-check form-switch pr-0 mr-0 align-middle">
+                                                <input class="form-check-input" type="checkbox" id="field-${fieldname}-searcheble=input" entityfieldformtype="checkbox">
+                                            </div>
+                                        </td>
+                                    </tr>`)
             }
 
+            return tbodyFieldsHtml.join('')
         }
 
     })()
