/adm para /framework

--- a/views/blocks/nav.ejs
+++ b/views/blocks/nav.ejs
@@ -1,13 +1,13 @@
 <nav class="navbar navbar-expand-md fixed-top bg-white"
     style="margin-bottom: 0px !important; padding-bottom: 0px !important;">
     <div class="container-fluid">
-        <a class="navbar-brand" href="/adm"><img src="assets/images/aes-color-balao.png" height="42rem"></a>
+        <a class="navbar-brand" href="/framework"><img src="assets/images/aes-color-balao.png" height="42rem"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
             aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-            <div class="navbar-nav me-auto mb-md-0" id="nav-adm">
+            <div class="navbar-nav me-auto mb-md-0" id="nav-framework">
                 <div class="nav nav-pills" id="nav-tab" role="tablist">
                     <button class="nav-link active" id="nav-desktop-tab" data-bs-toggle="tab" data-bs-target="#nav-desktop"
                         type="button" role="tab" aria-controls="nav-desktop" aria-selected="false"><i
@@ -31,3 +31,12 @@
         </div>
     </div>
 </nav>
+
+
+
+
+
+
+
+
+
