--- a/views/pages/framework.ejs
+++ b/views/pages/framework.ejs
@@ -6,12 +6,12 @@
     <body>
       <%-include ../blocks/nav.ejs %>
         <main class="flex">
-          <div class="container-flex" id="main-adm">
+          <div class="container-flex" id="main-framework">
             <div class="tab-content px-4" id="nav-tabContent">
-              <%-include ../includes/adm/desktop/desktop-inc.ejs %>
-                <%-include ../includes/adm/apps/apps-inc.ejs %>
-                  <%-include ../includes/adm/governance/governance-inc.ejs %>
-                    <%-include ../includes/adm/tools/tools-inc.ejs %>
+              <%-include ../includes/framework/desktop/desktop-inc.ejs %>
+                <%-include ../includes/framework/apps/apps-inc.ejs %>
+                  <%-include ../includes/framework/governance/governance-inc.ejs %>
+                    <%-include ../includes/framework/tools/tools-inc.ejs %>
             </div>
           </div>
         </main>
@@ -54,7 +54,7 @@
     </script>
 
   </html>
-  <% // flush /adm %>
+  <% // flush /framework %>
 
     <!--
 Persona360
@@ -164,7 +164,7 @@ setores
 que regulam a maneira como uma empresa é:
 
 dirigida, 
-administrada e 
+frameworkinistrada e 
 controlada
 
 /////////////////////////////////////////
