--- a/views/includes/framework/tools/sql/tools-sql-inc.ejs
+++ b/views/includes/framework/tools/sql/tools-sql-inc.ejs
@@ -2,7 +2,7 @@
     
     <div class="alert alert-warning alert-dismissible show" role="alert">
         <strong><i class="bi bi-server"></i>&nbsp;&nbsp;Sql</strong><small> : requer permissão
-            [<strong>sql</strong>]</small>
+            [<strong>tools-sql</strong>]</small>
         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
     </div>
 
@@ -44,4 +44,4 @@
 
     </div>
 </div>
-
+<script src="assets/javascript/tools/socket/sql.js"></script>
