--- a/views/blocks/head.ejs
+++ b/views/blocks/head.ejs
@@ -6,7 +6,6 @@
 <title>
 <%=title%>
 </title>
-<%-include style.ejs %>
-<script>var meta = document.getElementsByTagName('meta')</script>
+<%-include ./style.ejs %>
 <script src="assets/javascript/app/alert.js"></script>
 </head>
