--- a/views/pages/framework.ejs
+++ b/views/pages/framework.ejs
@@ -17,6 +17,12 @@
         </main>
         <%-include ../blocks/javascript.ejs %>
     </body>
+    <script src="assets/javascript/tools/api/request.js"></script>
+    <script src="assets/javascript/tools/socket/package.js"></script>
+    <script src="assets/javascript/tools/socket/call.js"></script>
+    <script src="assets/javascript/tools/socket/sql.js"></script>
+    <script src="assets/javascript/tools/socket/file.js"></script>
+    <script src="assets/javascript/tools/socket/serverfunction.js"></script>
     <script>
 
       (() => {
