--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -45,7 +45,7 @@
           <img src="assets/images/balao-aes-color.svg" class="d-block mx-lg-auto img-fluid" loading="lazy">
         </div>
         <div class="col-lg-6 shadow p-5 border-light rounded">
-          <h1 class="display-5 fw-bold lh-1 mb-3">Estamos quase lá.</h1>
+          <h1 class="display-5 fw-bold lh-1 mb-3">Quase lá.</h1>
           <p class="lead">
           Estamos construindo um framework simples, prático, divertido e <strong>gratuito</strong> para dar uma força para quem quer começar a desenvolver sistemas web hoje mesmo. Venha a bordo!
           </p>
