Bs Cores Favicon Adequação de Layout listenChange(entity) operacional

--- a/views/blocks/style.ejs
+++ b/views/blocks/style.ejs
@@ -2,23 +2,42 @@
 <link href="assets/vendor/bootstrap-5.0.2-dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="assets/vendor/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet">
 <style>
+  body {
+    background-color: #ffffff
+  }
 
-    body{
-background-color:#ffffff
-    }
+  .primary {
+    color: #084298;
+  }
 
-    .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-    }
+  .warning {
+    color: #ffb028;
+  }
 
-    @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-            font-size: 3.5rem;
-        }
+  .bg-warning {
+    color: #fff583;
+  }
+
+  .text-warning {
+    color: #084298;
+  }
+
+  .border-waring {
+    color: #b6d4fe;
+  }
+
+  .bd-placeholder-img {
+    font-size: 1.125rem;
+    text-anchor: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+  }
+
+  @media (min-width: 768px) {
+    .bd-placeholder-img-lg {
+      font-size: 3.5rem;
     }
+  }
 </style>
-    <link href="assets/css/navbar-top-fixed.css" rel="stylesheet">
+<link href="assets/css/navbar-top-fixed.css" rel="stylesheet">
