--- a/views/includes/framework/tools/dev/tools-dev-entity-create-inc.ejs
+++ b/views/includes/framework/tools/dev/tools-dev-entity-create-inc.ejs
@@ -1,90 +1,11 @@
-<div class="flex-column mt-3" id="entity-div" style="display: none;">
-    <div class="alert alert-warning alert-dismissible show" role="alert">
-        <strong><i class="bi bi-box"></i>&nbsp;&nbsp;Criar Entidade</strong><small> : requer permissão
-            [<strong>tools-dev-entity-create</strong>]</small>
-        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-    </div>
-    <div id="entity-div-create">
-        <form class="form-group">
+<!-- @format -->
 
-            <div class="alert alert-info alert-dismissible show" role="alert">
-                <strong><i class="bi bi-box"></i>&nbsp;&nbsp;Nome</strong><small> : primário (<strong>único</strong>) em
-                    todo o sistema</small>
-                <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-            </div>
+<div class="tab-pane mt-3" id="entity-create" role="tabpanel" aria-labelledby="entity-create-tab">
+	<div class="alert alert-warning alert-dismissible show" role="alert">
+		<strong><i class="bi bi-box"></i>&nbsp;&nbsp;Criar entidade</strong>
+		<small> : requer permissão [<strong>tools-dev-entity-create</strong>]</small>
+		<button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+	</div>
 
-            <div class="mb-4" id="entity-div-input-name">
-                <label for="entity-input-text-name" class="label mb-1 text-secondary"><i
-                        class="bi bi-box"></i>&nbsp;Nome</label>
-                <input type="text" class="form-control" id="entity-input-name" value="pessoa"
-                    placeholder="// #issue: pesquisar no banco entidade com mesmo nome a partir do terceiro caracter digitado">
-            </div>
-            <div class="mb-4 " style="display: none;" id="entity-div-input-namespace">
-
-                <div class="alert alert-info alert-dismissible show" role="alert">
-                    <strong><i class="bi bi-tags"></i>&nbsp;&nbsp;Namespace</strong><small> : id[entidade], crdate e
-                        isactive são criados em todas as tabelas por padrão</small>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-
-                <label for="entity-namespace" class="label mb-1 text-secondary"><i
-                        class="bi bi-tags"></i>&nbsp;Namespace</label>
-                <textarea class="form-control" style="height: 5rem;" id="entity-input-namespace"
-                    placeholder="// #issue: analisar o namespace de todo sistema">
-nome, email, celular, senha</textarea>
-            </div>
-
-            <div class="mb-4" style="display: none;" id="entity-div-input-fields">
-
-                <div class="alert alert-info alert-dismissible show" role="alert">
-                    <strong><i class="bi bi-server"></i>&nbsp;&nbsp;Table</strong><small> : configura a privacidade,
-                        tipo, tamanho e Null: o campo não é obrigatório; <i class="bi bi-search"></i>: permite busca
-                    </small>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-
-                <label for="entity-fields" class="label mb-1 text-secondary"><i
-                        class="bi bi-server"></i>&nbsp;Campos</label>
-                <div class="table-responsive border-top">
-                    <table class="table table-hover">
-                        <thead>
-                            <th class="text-left">Nome</th>
-                            <th class="text-center" style="width: 12rem;">Privacidade&nbsp;<i
-                                    class="bi bi-lock-fill"></i>
-                            </th>
-                            <th class="text-center" style="width: 12rem;">Tipo</th>
-                            <th class="text-center" style="width: 12rem;">Tamanho</th>
-                            <th class="text-left" style="width: 2.5rem;">Null</th>
-                            <th class="text-left fw-bold" style="width: 2.5rem;"><i class="bi bi-search"></i></th>
-                        </thead>
-                        <tbody id="entity-fields-tbody"></tbody>
-                    </table>
-                </div>
-            </div>
-
-            <div class="table-responsive border-top" id="entity-div-input-fields-form" style="display: none;">
-                <table class="table table-striped table-hover">
-                    <thead>
-                        <th class="text-left">Id</th>
-                        <th class="text-center">Tipo</th>
-                        <th class="text-center">Label</th>
-                        <th class="text-center">Valor Inicial</th>
-                        <th class="text-center">Obrigatório</th>
-                        <th class="text-center">Placeholder</th>
-                        <th class="text-center">Formatador</th>
-                        <!-- #issue: implantar para ser AAA -->
-                        <!-- https://ceweb.br/cartilhas/cartilha-w3cbr-acessibilidade-web-fasciculo-IV/ -->
-                        <th class="text-center">wcag&nbsp;<i class="bi bi-emoji-smile"></i></th>
-                    </thead>
-                    <tbody id="entity-fields-form-tbody"></tbody>
-                </table>
-            </div>
-
-        </form>
-    </div>
-
+	<%-include ./tools-dev-entity-create-form-inc.ejs %>
 </div>
-<script src="assets/javascript/tools/utils/entityCreate.js"></script>
-<script src="assets/javascript/tools/utils/helperTbody.js"></script>
-<script src="assets/javascript/tools/utils/value.js"></script>
-<script src="assets/javascript/tools/utils/eventHandler.js"></script>
